# AoC_Data_Harvester

./: .gitignore  README.md  aoc.db  base.py  completion_stats_bot.py  config.py  db.py  puzzle.py  puzzle_and_leaderboard_bot.py  pyproject.toml  requirements.txt  scrape_completion_stats.py  scrape_title_and_leaderboard.py  stats_bot.py
.github/workflows/: hello_world.yml  scrape_completion_stats.yml  scrape_completions_stats.yml  scrape_puzzle_and_leaderboard.yml  scrape_title_and_leaderboard.yml
