[project]
name = "aoc-data-harvester"
version = "0.1.0"
description = "Automated Advent of Code data scrapers."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "beautifulsoup4==4.12.3",
    "pandas>=3,<4",
    "requests==2.31.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "plotly>=6.7.0",
]

[tool.uv]
package = false
